k8s/ingress-nginx-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
  spec:
        http:
          paths:
            - path: /?(.*)
            # UPDATE THIS LINE ABOVE
              backend:
                serviceName: client-cluster-ip-service
                servicePort: 3000
            - path: /api/?(.*)
            # UPDATE THIS LINE ABOVE
              backend:
                serviceName: server-cluster-ip-service
                servicePort: 5000 
    # cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
# spec:
#   tls:
#     - hosts:
#         - candidwork.co
#         - www.candidwork.co
#       secretName: candidwork-co

#   rules:
#     - host: candidwork.co
#       http:
#           paths:
#             - path: /?(.*)
#             # UPDATE THIS LINE ABOVE
#               backend:
#                 serviceName: client-cluster-ip-service
#                 servicePort: 3000
#             - path: /api/?(.*)
#             # UPDATE THIS LINE ABOVE
#               backend:
#                 serviceName: server-cluster-ip-service
#                 servicePort: 5000
#     - host: www.candidwork.co
#       http:
#           paths:
#             - path: /?(.*)
#             # UPDATE THIS LINE ABOVE
#               backend:
#                 serviceName: client-cluster-ip-service
#                 servicePort: 3000
#             - path: /api/?(.*)
#             # UPDATE THIS LINE ABOVE
#               backend:
#                 serviceName: server-cluster-ip-service
#                 servicePort: 5000
